--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             YOFOOD
                         </a>
                         <div class="flex items-center gap-5 lg:hidden">
-                            <a href="#" class="rounded-4xl bg-amber-300 text-black border px-4 py-2">Reserve</a>
+                            <a href="#" class="rounded-4xl bg-amber-300 text-black border px-4 py-2 cursor-pointer">Reserve</a>
                             <button
                                 type="button"
                                 class="collapse-toggle btn btn-outline btn-secondary btn-square"
