--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 </section>
 
 
-<main class="p-11 animation-main">
+<main class="p-11 ">
     
-<section id="menu" class="menu mt-36 pt-32 pb-30 rounded-4xl shadow-2xl backdrop-blur-md animation-main fade-up">
+<section id="menu" class="menu mt-36 pt-32 pb-30 rounded-4xl shadow-2xl backdrop-blur-2xl  fade-up">
     <div class="menu-heading mb-20">
          <h1 class="text-white text-4xl font-bold text-center">Try our New Food Menu</h1>
     </div>
@@ -170,7 +170,7 @@
 </section>
 
 
-<section class="services mt-40 backdrop-blur-sm rounded-4xl shadow-2xl p-11 animation-main fade-up">
+<section class="services mt-40 backdrop-blur-sm rounded-4xl shadow-2xl p-11 fade-up">
     <h2 class="text-center text-white text-7xl font-bold mb-10 text-shadow-lg ">We Have a Service <br> That Can Satisfy You</h2>
     <p class="text-center text-white text-lg">Our services are designed to provide you with the best experience possible. <br> Whether you're looking for a quick bite or a full-course meal, we've got you covered.</p>
     <div class="btn-groups flex items-center justify-center gap-5 mt-11 flex-wrap  text-white">
@@ -366,7 +366,7 @@
 
 
 
-<h1 class="text-6xl font-bold mt-20 text-center text-white animation-main fade-up">Contact Us</h1>
+<h1 class="text-6xl font-bold mt-20 text-center text-white  fade-up">Contact Us</h1>
 <section class="contact flex justify-between gap-11 mt-10 mb-20 pt-10 pb-10 pl-10 pr-10 bg-white rounded-4xl shadow-2xl max-lg:flex-col fade-up animation-main">
   
   <div class="contact-card bg-[#744af4] w-80 rounded-2xl">
